feat: Add LoadMetrics support for virtual thread executor.